[gd_scene load_steps=13 format=3 uid="uid://bs08ehdf2j42p"]

[ext_resource type="Script" uid="uid://bio2eol80ixpd" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://dlxkh5ebpjl3k" path="res://sprites/Clouds/Clouds 1/1.png" id="2_v86rl"]
[ext_resource type="FontFile" uid="uid://da4gcssh8onri" path="res://fonts/PixelOperator8-Bold.ttf" id="2_vjb58"]
[ext_resource type="Texture2D" uid="uid://of5mlkgoxk1h" path="res://sprites/Clouds/Clouds 5/5.png" id="3_13sgg"]
[ext_resource type="FontFile" uid="uid://boi7xjw4orujj" path="res://fonts/PixelOperator8.ttf" id="3_con2f"]
[ext_resource type="Texture2D" uid="uid://c2i1hyhi5liw8" path="res://sprites/Clouds/Clouds 5/3.png" id="4_i6lef"]
[ext_resource type="Script" uid="uid://b10o44n47hjl1" path="res://scripts/texture_rect_3.gd" id="5_13sgg"]
[ext_resource type="Texture2D" uid="uid://bxsqprtr8f0pf" path="res://sprites/Clouds/Clouds 1/2.png" id="5_70i5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h3mk"]
content_margin_left = 5.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 10.0
bg_color = Color(0.262664, 0.632097, 0.999322, 1)
border_color = Color(0.807477, 0.872842, 0.990723, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqeox"]
content_margin_left = 5.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 10.0
bg_color = Color(0.533333, 0.564706, 0.905882, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yqeox"]
color = Color(0.67451, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjb58"]
content_margin_left = 5.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 10.0
bg_color = Color(0.533333, 0.564706, 0.905882, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85293, 0.906017, 0.951717, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v86rl")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_13sgg")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_i6lef")
expand_mode = 1
script = ExtResource("5_13sgg")

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1151.0
offset_top = 56.0
offset_right = -1151.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_i6lef")
expand_mode = 1
script = ExtResource("5_13sgg")

[node name="TextureRect4" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_70i5f")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -102.5
offset_right = 130.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_4h3mk")
text = "Jugar"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_yqeox")
text = "Opciones"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxLine_yqeox")
theme_override_styles/normal = SubResource("StyleBoxFlat_vjb58")
text = "Salir"

[node name="score_screen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.697282, 0.714844, 0.393723, 1)
theme_override_fonts/font = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 32
text = "ssss"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
